--- a/docs/layouts/partials/scripts.html
+++ b/docs/layouts/partials/scripts.html
@@ -1,3 +1,4 @@
 {{/* Custom scripts for flux9s docs - loaded at end of body */}}
+<script src="{{ "js/font-fallback.js" | relURL }}"></script>
 <script src="{{ "js/metadata.js" | relURL }}"></script>
 <script src="{{ "js/dark-mode.js" | relURL }}"></script>
