--- a/docs/layouts/partials/navbar.html
+++ b/docs/layouts/partials/navbar.html
@@ -25,7 +25,8 @@
     <div class="d-flex align-items-center ms-3">
       {{/* Dark mode toggle */}}
       <button class="theme-toggle btn btn-link text-decoration-none" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle dark mode">
-        <i class="fas fa-moon" id="theme-icon"></i>
+        <i class="fas fa-moon" id="theme-icon" aria-hidden="true"></i>
+        <span class="sr-only">Toggle dark mode</span>
       </button>
     </div>
   </div>
